--- a/mod/Domestication/localisation/english/name_list_PLANT5_l_english.yml
+++ b/mod/Domestication/localisation/english/name_list_PLANT5_l_english.yml
@@ -2034,7 +2034,9 @@
  AFFINI_CHR_F_Catasellia:0 "Catasellia"
  AFFINI_CHR_F_Cattleya:0 "Cattleya"
  AFFINI_CHR_F_Centromadia:0 "Centromadia"
+ AFFINI_CHR_F_Cimicfuga:0 "Cimicfuga"
  AFFINI_CHR_F_Cobunoria:0 "Cobunoria"
+ AFFINI_CHR_F_Convallaria:0 "Convallaria"
  AFFINI_CHR_F_Ceptoria:0 "Ceptoria"
  AFFINI_CHR_F_Clematis:0 "Clematis"
  AFFINI_CHR_F_Cronquistia:0 "Cronquistia"
@@ -2048,6 +2050,7 @@
  AFFINI_CHR_F_Echinacea:0 "Echinacea"
  AFFINI_CHR_F_Ellenbergia:0 "Ellenbergia"
  AFFINI_CHR_F_Elorium:0 "Elorium"
+ AFFINI_CHR_F_Ephedra:0 "Ephedra"
  AFFINI_CHR_F_Epiphytum:0 "Epiphytum"
  AFFINI_CHR_F_Esperium:0 "Esperium"
  AFFINI_CHR_F_Eugenia:0 "Eugenia"
@@ -2056,6 +2059,7 @@
  AFFINI_CHR_F_Excelsa:0 "Excelsa"
  AFFINI_CHR_F_Feron:0 "Feron"
  AFFINI_CHR_F_Flora:0 "Flora"
+ AFFINI_CHR_F_Fragaria:0 "Fragaria"
  AFFINI_CHR_F_Fugatia:0 "Fugatia"
  AFFINI_CHR_F_Glabu:0 "Glabu"
  AFFINI_CHR_F_Gronium:0 "Gronium"
@@ -2107,6 +2111,7 @@
  AFFINI_CHR_F_Orchidaceae:0 "Orchidaceae"
  AFFINI_CHR_F_Oxalis:0 "Oxalis"
  AFFINI_CHR_F_Panokiria:0 "Panokiria"
+ AFFINI_CHR_F_Penstemon:0 "Penstemon"
  AFFINI_CHR_F_Pentanthera:0 "Pentanthera"
  AFFINI_CHR_F_Phyllix:0 "Phyllix"
  AFFINI_CHR_F_Picea:0 "Picea"
@@ -2216,6 +2221,7 @@
  AFFINI_CHR_L_Macra:0 "Macra"
  AFFINI_CHR_L_Macronyx:0 "Macronyx"
  AFFINI_CHR_L_Magnoli:0 "Magnoli"
+ AFFINI_CHR_L_Mantha:0 "Mantha"
  AFFINI_CHR_L_Maxima:0 "Maxima"
  AFFINI_CHR_L_Medicago:0 "Medicago"
  AFFINI_CHR_L_Mexus:0 "Mexus"
@@ -2268,6 +2274,9 @@
  AFFINI_CHR_L_Vanda:0 "Vanda"
  AFFINI_CHR_L_Venusta:0 "Venusta"
  AFFINI_CHR_L_Verim:0 "Verim"
+ AFFINI_CHR_L_Verticallata:0 "Verticallata"
+ AFFINI_CHR_L_Vesca:0 "Vesca"
+ AFFINI_CHR_L_Viridis:0 "Viridis"
  AFFINI_CHR_L_Vit:0 "Vit"
  AFFINI_CHR_L_Vitalba:0 "Vitalba"
  AFFINI_CHR_L_Vitanix:0 "Vitanix"
